<resources>
    <string name="app_name">MachineTest</string>
    <string name="loading">Loading…</string>

    <string name="launch_activity">Launch</string>
    <string name="location_unknown">Location unknown</string>
    <string name="location_updates_label">Location Updates</string>

    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>
    <string name="ok">OK</string>
    <string name="request_location_updates">Request location updates</string>
    <string name="stop_location_updates">Stop</string>

    <string name="last_updated">Last Updated: %1$s</string>
    <string name="start_location_service">Start Location Service</string>
    <string name="stop_location_service">Stop Location Service</string>
    <string name="location">Location</string>
    <string name="fetch_file">Fetch File</string>
    <string name="file_name">File Name:</string>
    <string name="file_path">File Path :</string>
    <string name="fetch_pdf">Fetch PDF</string>
    <string name="fetch_jpg">Fetch JPG</string>
    <string name="file_name_x">File Name : \n %s</string>
</resources>